--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,7 +1,18 @@
+
 .container {
-    background-color: rgba(131, 130, 210, 0.56);
-    height: 100px;
-    align-items: center;
-    justify-content: space-between;
-    display: flex;
+  background-color: rgba(131, 130, 210, 0.56);
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.footerContent {
+  max-width: 800px;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .footerContent {
+    max-width: 90%;
+  }
 }
