--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,7 +1,6 @@
-
 .container {
-  background-color: rgba(131, 130, 210, 0.56);
-  padding: 20px;
+  background-color: #f1c40f;
+  padding: 40px 20px;
   display: flex;
   justify-content: center;
 }
@@ -11,8 +10,33 @@
   text-align: center;
 }
 
-@media (max-width: 768px) {
-  .footerContent {
-    max-width: 90%;
-  }
+.iconContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.locationIcon, .envelopeIcon {
+  color: #e74c3c;
+  margin-right: 10px;
+}
+
+.footerContent h3 {
+  font-size: 1.5rem;
+  font-family: 'Comic Sans MS', cursive, sans-serif;
+  color: #e74c3c;
+}
+
+.footerContent p {
+  font-size: 1rem;
+  font-family: 'Arial', sans-serif;
+}
+
+.footerContent small {
+  font-size: 0.8rem;
+  display: block;
+  margin-top: 30px;
+  color: #3498db;
+  font-style: italic;
 }
