--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,17 +1,14 @@
+/* mobile first*/
 
 .container {
-  background-color: #e39b4e;
+  background: linear-gradient(45deg, #f3b538,  #2999b5,#4278d2);
   height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
   font-family: Arial, sans-serif;
+  padding-right: 10px;
 }
-
-/* .container:hover {
-  background-color: #74a2da;
-} */
 
 .logoContainer {
   display: flex;
@@ -27,13 +24,13 @@
 .logoText {
   margin-left: 10px;
   font-weight: bold;
-  font-size: 22px;
+  font-size: 12px;
 }
 
 .links {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
 }
 
 .link {
@@ -46,7 +43,7 @@
 
 .link:hover {
   color: #042e62;
-  background-color: #ccc; 
+  background-color: #ccc;
   border-radius: 3px;
   padding: 3px;
 }
@@ -63,7 +60,6 @@
   transition: transform 0.3s;
 }
 
-
 .logout {
   padding: 5px 10px;
   border: none;
@@ -77,4 +73,52 @@
 
 .logout:hover {
   background-color: #e39b4e;
+}
+
+/* Styles pour les petits écrans (mobiles) */
+@media (max-width: 768px) {
+  .container {
+    padding: 0 10px;
+  }
+
+  .logoText {
+    font-size: 18px;
+  }
+
+  .link {
+    font-size: 16px;
+  }
+
+  .logout {
+    font-size: 14px;
+  }
+  .linkTitle {
+    display: none;
+  }
+  .logoText {
+    display: none;
+  }
+  .logoLink{
+    width: 50px;
+    height: 50px;
+  }
+}
+
+/* Styles pour les écrans de tablette */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .container {
+    padding: 0 30px;
+  }
+
+  .logoText {
+    font-size: 20px;
+  }
+
+  .link {
+    font-size: 18px;
+  }
+
+  .logout {
+    font-size: 16px;
+  }
 }
