--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -17,10 +17,9 @@
   color: #333;
 }
 .title {
-  font-size: 24px;
   text-align: center;
   color: #333;
-  margin-bottom: 10px;
+  margin: 10px;
 }
 .logoText {
   margin-left: 10px;
