--- a/src/components/banner/banner.module.css
+++ b/src/components/banner/banner.module.css
@@ -4,7 +4,7 @@
   background-image: url("/public/hero.jpg");
   background-size: cover;
   background-position: center;
-  height: 400px;
+  height: 415px;
 }
 
 .overlay {
@@ -21,28 +21,27 @@
   justify-content: space-between;
   align-items: center;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 80%;
-  padding: 20px;
+  
+  width: 100%;
+  padding: 3px;
   color: white;
+  flex-direction: column;
 }
 
 .leftText {
-  width: 40%;
+  width: 100%;
   opacity: 0.9;
-  text-align: left;
+  text-align: center;
+  padding: 20px;
 }
 
-.rightText {
-  width: 40%;
+.imgText {
   opacity: 0.9;
   text-align: right;
 }
 
 .img {
-  border-radius: 8px;
+  border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
