--- a/src/components/carousel/mycarousel.module.css
+++ b/src/components/carousel/mycarousel.module.css
@@ -18,15 +18,15 @@
   border: 1px solid #ccc;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  margin: 10px;
+  min-width: 300px;
   text-align: center;
-  max-width: 220px;
+  max-width: 322px;
   border-radius: 30px;
 }
 
 .card img {
   max-width: 100%;
-  height: 100px;
+  height: 166px;
   margin-bottom: 10px;
   border-radius: 15px;
 }
@@ -60,7 +60,7 @@
   cursor: pointer;
   transition: background-color 0.3s;
   border-radius: 10px;
-  width: 100%; 
+  width: 100%;
 }
 
 .addButton:hover {
