--- a/src/components/banner/banner.module.css
+++ b/src/components/banner/banner.module.css
@@ -1,10 +1,11 @@
-/* Styles pour le bandeau avec image */
+/* Mobile first */
+
 .banner {
   position: relative;
-  background-image: url("/public/hero.jpg");
+  height: 415px;
   background-size: cover;
   background-position: center;
-  height: 415px;
+  background-image: url("/public/hero.jpg");
 }
 
 .overlay {
@@ -12,8 +13,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: #10446d40;
+  background-color: #10446dfa;
 }
 
 .textContainer {
@@ -21,26 +21,22 @@
   justify-content: space-between;
   align-items: center;
   position: absolute;
-  
   width: 100%;
-  padding: 3px;
+  padding: 20px;
   color: white;
   flex-direction: column;
 }
 
-.leftText {
+.text {
   width: 100%;
   opacity: 0.9;
   text-align: center;
-  padding: 20px;
-}
-
-.imgText {
-  opacity: 0.9;
-  text-align: right;
 }
 
 .img {
+  position: relative;
+  width: 100%;
+  height: 100%;
   border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
@@ -49,4 +45,53 @@
 .img:hover {
   transform: scale(1.05);
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+}
+/* Tablettes */
+@media (min-width: 768px) {
+  .banner {
+    background-image: url("/public/hero.jpg");
+    height: 300px; /* Ajuster la hauteur selon vos besoins */
+  }
+
+  .textContainer {
+    flex-direction: row; /* Afficher le texte et l'image côte à côte */
+    padding: 20px; /* Ajuster l'espacement intérieur */
+  }
+
+  .text {
+    width: 50%; /* Occuper la moitié de la largeur */
+    opacity: 0.9;
+    text-align: left; /* Aligner le texte à gauche */
+    padding: 20px;
+  }
+
+  .imgText {
+    width: 50%; /* Occuper l'autre moitié de la largeur */
+    text-align: right;
+  }
+
+  .img {
+    width: 80%; /* Réduire légèrement la largeur de l'image */
+    max-height: 100%; /* Ajuster la hauteur de l'image pour éviter le débordement */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  }
+
+  .img:hover {
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+  }
+}
+
+/* Écrans d'ordinateur */
+@media (min-width: 1024px) {
+  .banner {
+    height: 383px; /* Ajuster la hauteur selon vos besoins */
+  }
+
+  .text {
+    width: 40%; 
+  }
+
+  .Image {
+    width: 60%; 
+  }
 }
