--- a/src/components/banner/banner.module.css
+++ b/src/components/banner/banner.module.css
@@ -1,5 +1,4 @@
 /* Mobile first */
-
 .banner {
   position: relative;
   height: 415px;
@@ -13,85 +12,74 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #10446dfa;
+  background-color: rgba(16, 68, 223, 0.98); /* Utilisation de rgba pour l'opacité */
+}
+
+.contentContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .textContainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: absolute;
   width: 100%;
   padding: 20px;
-  color: white;
-  flex-direction: column;
-}
-
-.text {
-  width: 100%;
-  opacity: 0.9;
+  color: black;
   text-align: center;
 }
 
+.text {
+  opacity: 0.9;
+}
+
 .img {
-  position: relative;
   width: 100%;
-  height: 100%;
   border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  margin-top: 20px;
 }
 
 .img:hover {
   transform: scale(1.05);
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
 }
+
 /* Tablettes */
 @media (min-width: 768px) {
   .banner {
-    background-image: url("/public/hero.jpg");
-    height: 300px; /* Ajuster la hauteur selon vos besoins */
+    height: 300px;
   }
 
-  .textContainer {
-    flex-direction: row; /* Afficher le texte et l'image côte à côte */
-    padding: 20px; /* Ajuster l'espacement intérieur */
+  .contentContainer {
+    flex-direction: row;
   }
 
   .text {
-    width: 50%; /* Occuper la moitié de la largeur */
-    opacity: 0.9;
-    text-align: left; /* Aligner le texte à gauche */
+    width: 50%;
+    text-align: left;
     padding: 20px;
   }
 
-  .imgText {
-    width: 50%; /* Occuper l'autre moitié de la largeur */
-    text-align: right;
-  }
-
   .img {
-    width: 80%; /* Réduire légèrement la largeur de l'image */
-    max-height: 100%; /* Ajuster la hauteur de l'image pour éviter le débordement */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-  }
-
-  .img:hover {
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+    width: 80%;
+    max-width: 300px;
   }
 }
 
 /* Écrans d'ordinateur */
 @media (min-width: 1024px) {
   .banner {
-    height: 383px; /* Ajuster la hauteur selon vos besoins */
+    height: 383px;
   }
 
   .text {
-    width: 40%; 
+    width: 40%;
   }
 
-  .Image {
-    width: 60%; 
+  .img {
+    width: 60%;
+    max-width: 400px;
   }
 }
