--- a/src/components/banner/banner.module.css
+++ b/src/components/banner/banner.module.css
@@ -7,13 +7,7 @@
   background-image: url("/public/hero.jpg");
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: rgba(16, 68, 223, 0.98); /* Utilisation de rgba pour l'opacité */
-}
+
 
 .contentContainer {
   display: flex;
@@ -27,6 +21,8 @@
   padding: 20px;
   color: black;
   text-align: center;
+  border-top: 3px solid #2588b8; 
+  border-bottom: 3px solid #2588b8; 
 }
 
 .text {
@@ -34,8 +30,6 @@
 }
 
 .img {
-  width: 100%;
-  border-radius: 15px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   margin-top: 20px;
@@ -45,7 +39,6 @@
   transform: scale(1.05);
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
 }
-
 /* Tablettes */
 @media (min-width: 768px) {
   .banner {
@@ -56,6 +49,14 @@
     flex-direction: row;
   }
 
+  .textContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+  }
+
   .text {
     width: 50%;
     text-align: left;
@@ -63,7 +64,8 @@
   }
 
   .img {
-    width: 80%;
+    width: 50%;
+    text-align: right;
     max-width: 300px;
   }
 }
@@ -80,6 +82,6 @@
 
   .img {
     width: 60%;
-    max-width: 400px;
+    max-width: 500px;
   }
 }
