--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -91,7 +91,15 @@
   margin-bottom: 20px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
-
+.arrow{
+  display: flex;
+  align-items: center;
+  width: 0;
+height: 0;
+border-style: solid;
+border-width: 80px 0 80px 100px;
+border-color: transparent transparent transparent #1523bc;
+}
 /* Media query pour tablettes */
 @media (min-width: 768px) {
   .container {
