--- a/src/components/carousel/mycarousel.module.css
+++ b/src/components/carousel/mycarousel.module.css
@@ -23,11 +23,14 @@
   padding: 20px;
   min-width: 261px;
   text-align: center;
-  max-width: 322px;
+  max-width: 273px;
   border-radius: 30px;
   margin-bottom: 20px; 
+  margin-left: 54px;
 }
-
+.li{
+  margin-left: 54px;
+}
 .card img {
   max-width: 100%;
   height: 166px;
