--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,27 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
 
+/* Polices */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+/* Corps de la page */
 html,
 body {
     max-width: 100vw;
     overflow-x: hidden;
-    background-color: rgb(41, 153, 181);
+    font-family: 'Roboto', sans-serif;
 }
 
+/* Liens */
 a {
     text-decoration: none;
     color: inherit;
 }
 
+/* Conteneur principal */
 .container {
-    background-color: antiquewhite;
     max-width: 1366px;
     min-height: 100vh;
     margin: 0 auto;
-    padding: 0 ;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
