--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -26,11 +26,10 @@
 
 .title {
   text-align: center;
-  color: white;
   margin: 10px;
   border: white solid 4px;
-  border-radius: 10px 30px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  /* border-radius: 10px 30px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); */
   height: 183px;
   padding-top: 41px;
 
@@ -66,12 +65,6 @@
 }
 
 .backgroundArrow {
-  position: relative;
-  /* Ajoutez cette ligne */
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   z-index: 1;
 }
 
@@ -81,8 +74,7 @@
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 200px 0 200px 250px;
-  border-color: transparent transparent transparent #1523bc;
+  border-width: 127px 0 147px 162px;  border-color: transparent transparent transparent #1523bc36;
   position: absolute;
   bottom: 0;
 }
@@ -130,6 +122,13 @@
 
   .title {
     font-size: 36px;
+    text-align: center;
+    margin: 10px;
+    height: 183px;
+    padding-top: 41px;
+    background: linear-gradient(135deg, #1523bc, hsl(32, 100%, 53%));
+    background-clip: text;
+    color: transparent;
   }
 
   .img {
@@ -138,7 +137,7 @@
 
   .desc {
     font-size: 20px;
-    max-width: 80%;
+    max-width: 97%;
     margin: 20px auto;
   }
 }
