--- a/src/components/banner/banner.module.css
+++ b/src/components/banner/banner.module.css
@@ -1,4 +1,5 @@
 /* Mobile first */
+
 .banner {
   position: relative;
   height: 415px;
@@ -8,27 +9,33 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  background-color: #28db4a36;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-
+  /* height: 100%; */
+  background-color: #ff8c0061;
+  box-shadow: 0px 4px 10px rgb(0 0 0 / 58%);
 }
 
 .textContainer {
   width: 100%;
   padding: 20px;
-  color: #333;
   text-align: center;
 }
 
-.text {
-  opacity: 0.9;
-}
 
+.text h2,
+.text p {
+  font-size: 34px;
+  margin-bottom: 10px;
+  color: #042e62;
+  
+}
+.text p {
+  font-size: 24px;
+}
 .img {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   margin-top: 20px;
+  border-radius: 10px;
 }
 
 .img:hover {
@@ -50,7 +57,7 @@
 .arrow3 {
   border-style: solid;
   border-width: 0;
-  border-color: transparent transparent transparent #1523bc;
+  border-color: transparent transparent transparent #071cff4d;
   opacity: 0.5;
 }
 
@@ -86,6 +93,7 @@
 
   .contentContainer {
     flex-direction: row;
+    border-radius: 15px;
   }
 
   .textContainer {
@@ -105,6 +113,7 @@
     text-align: right;
     max-width: 300px;
   }
+
   .arrow1 {
     width: 40px;
     height: 40px;
@@ -133,7 +142,7 @@
 /* Écrans d'ordinateur */
 @media (min-width: 1024px) {
   .banner {
-    height: 445px;
+    height: 335px;
   }
 
   .text {
@@ -143,16 +152,14 @@
   .img {
     width: 38%;
     max-width: 428px;
-    border-radius: 28px;
-
-
+    border-radius: 10px;
   }
+
   .arrow1 {
-    width: 60px;
-    height: 60px;
-    top: 10%;
-    left: 5%;
-    border-width: 60px 0 0 60px;
+
+    left: 41%;
+    border-width: 132px 0 0 118px;
+    z-index: -1;
   }
 
   .arrow2 {
@@ -171,10 +178,12 @@
     border-width: 160px 0 0 160px;
   }
 
-  
   .text {
-    opacity: 0.9;
-    position: relative; /* Ajoutez cette ligne */
-    z-index: 2; /* Ajoutez cette ligne */
+    background-color:whitesmoke;
+    position: relative;
+    z-index: 2;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   }
 }
