--- a/src/components/carousel/mycarousel.module.css
+++ b/src/components/carousel/mycarousel.module.css
@@ -18,22 +18,20 @@
 
 .card {
   background-color: #fff;
-  border: 1px solid #ccc;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  min-width: 261px;
-  text-align: center;
-  max-width: 273px;
-  border-radius: 30px;
-  margin-bottom: 20px; 
-  margin-left: 54px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    width: 174px;
+    text-align: center;
+    border-radius: 30px;
+    margin-bottom: 20px;
 }
 .li{
   margin-left: 54px;
 }
 .card img {
   max-width: 100%;
-  height: 166px;
+  height: 120px;
   margin-bottom: 10px;
   border-radius: 15px;
 }
