--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,6 +6,19 @@
   padding: 20px;
 }
 
+/* Styles pour l'image d'en-tête */
+.headerImage {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.headerImage .image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 .logoContainer {
   display: flex;
@@ -32,7 +45,6 @@
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); */
   height: 183px;
   padding-top: 41px;
-
 }
 
 .desc {
@@ -74,11 +86,11 @@
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 127px 0 147px 162px;  border-color: transparent transparent transparent #1523bc36;
+  border-width: 127px 0 147px 162px;
+  border-color: transparent transparent transparent #1523bc36;
   position: absolute;
   bottom: 0;
 }
-
 
 .img {
   width: 100%;
