--- a/src/components/carousel/mycarousel.module.css
+++ b/src/components/carousel/mycarousel.module.css
@@ -1,3 +1,4 @@
+/* Styles de base pour les mobiles */
 .carouselContainer {
   text-align: center;
   padding: 20px;
@@ -11,9 +12,7 @@
 
 .carousel {
   display: flex;
-  align-items: center;
   justify-content: space-between; 
-  flex-wrap: wrap; 
 }
 
 .card {
@@ -21,7 +20,7 @@
     border: 1px solid #ccc;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: 174px;
+    width:333px;
     text-align: center;
     border-radius: 30px;
     margin-bottom: 20px;
@@ -31,7 +30,7 @@
 }
 .card img {
   max-width: 100%;
-  height: 120px;
+  height: 208px;
   margin-bottom: 10px;
   border-radius: 15px;
 }
@@ -79,4 +78,31 @@
 .showMoreButton {
   display: block;
   margin-top: 10px;
+}
+@media screen and (min-width: 768px) {
+  .carouselTitle {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  .card {
+    width: calc(70% );
+    margin-left: 35px;
+  }
+  
+}
+
+/* Styles pour les écrans plus larges */
+@media screen and (min-width: 1024px) {
+  .card {
+    width: calc(78%);
+    margin-left: 3px;
+
+  }
+  .card img {
+    max-width: 100%;
+    height: 150px;
+    margin-bottom: 10px;
+    border-radius: 15px;
+  }
 }
