--- a/src/components/carousel/mycarousel.module.css
+++ b/src/components/carousel/mycarousel.module.css
@@ -79,6 +79,9 @@
   display: block;
   margin-top: 10px;
 }
+
+/* Styles de base pour les tablette */
+
 @media screen and (min-width: 768px) {
   .carouselTitle {
     font-size: 24px;
