--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -1,3 +1,17 @@
-.container{
+.container {
     background-color: rgb(0, 93, 139);
+    padding: 20px;
+}
+
+.header {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    overflow: hidden; /* Cache le contenu qui dépasse */
+}
+
+.img {
+    object-fit: cover; /* Ajuste l'image pour couvrir toute la zone */
+    width: 100%;
+    height: 100%;
 }
