--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,5 @@
 /* Styles mobile first */
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding: 20px;
 }
 
@@ -10,15 +7,10 @@
 .headerImage {
   position: relative;
   width: 100%;
-  height: 100vh;
   overflow: hidden;
 }
 
-.headerImage .image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+
 
 .logoContainer {
   display: flex;
@@ -95,7 +87,6 @@
 .img {
   width: 100%;
   max-width: 300px;
-  height: auto;
   display: block;
   margin: 0 auto;
   border-radius: 8px;
@@ -112,13 +103,11 @@
 @media (min-width: 768px) {
   .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
   }
 
-  .img {
-    max-width: 500px;
-  }
+ 
 
   .desc {
     text-align: left;
