--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,39 +4,30 @@
 }
 
 /* Styles pour l'image d'en-tête */
-.headerImage {
+.headerImage{
   position: relative;
   width: 100%;
   overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
-
-
-
-.logoContainer {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
+.image:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
 }
+.image{
+  border-radius: 20px;
+  height: 300px;
 
-.logoLink {
-  text-decoration: none;
-  color: #333;
 }
-
-.logoText {
-  margin-left: 10px;
-  font-weight: bold;
-  font-size: 18px;
-}
-
 .title {
   text-align: center;
   margin: 10px;
-  border: white solid 4px;
-  /* border-radius: 10px 30px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); */
   height: 183px;
   padding-top: 41px;
+  background: linear-gradient(135deg, #1523bc, hsl(32, 100%, 53%));
+  background-clip: text;
+  color: transparent;
 }
 
 .desc {
@@ -67,7 +58,7 @@
   padding-left: 20px;
   margin-bottom: 20px;
 }
-
+/*triangles*/
 .backgroundArrow {
   z-index: 1;
 }
@@ -107,7 +98,6 @@
     align-items: flex-start;
   }
 
- 
 
   .desc {
     text-align: left;
