--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -1,3 +1,57 @@
-.container{
+.container {
     background-color: darkcyan;
+}
+
+.title {
+    font-size: 60px;
+    margin-bottom: 100px;
+    text-align: center;
+}
+
+.content {
+    display: flex;
+    gap: 100px;
+    align-items: center;
+}
+
+.imgContainer {
+    flex: 1;
+    height: 500px;
+    position: relative;
+}
+
+.form {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.input,
+.textArea {
+    padding: 20px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: #bbb;
+    border: 3px solid #bbb;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.image {
+    object-fit: contain;
+    /* animation: move 3s infinite ease alternate; */
+    border-radius: 60%;
+}
+
+@keyframes move {
+    from {
+        transform: translate(-15px);
+    }
+
+    to {
+        transform: translate(0px) scale(1.03);
+
+    }
 }
