--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,3 @@
-
-
-
 .desc {
   font-size: 18px;
   text-align: center;
@@ -12,23 +9,23 @@
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.desc h2 {
+.h2 {
   font-size: 24px;
   margin-bottom: 10px;
-  margin-top: 10px;
   color: #0e0505;
 }
 
-.desc p {
+.p {
   line-height: 1.5;
   margin-bottom: 20px;
 }
 
-.desc ul {
+.ul {
   list-style: disc;
   padding-left: 20px;
   margin-bottom: 20px;
 }
+
 /*triangles*/
 .backgroundArrow {
   z-index: 1;
@@ -43,7 +40,10 @@
   border-width: 127px 0 147px 162px;
   border-color: transparent transparent transparent #1523bc36;
   /* position: absolute; */
-  bottom: 0;
+}
+
+.image {
+  object-fit: cover;
 }
 
 .img {
@@ -51,23 +51,34 @@
   max-width: 300px;
   display: block;
   margin: 0 auto;
-  border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  border-radius: 60%;
+  /* animation: move 3s infinite ease alternate; */
+  object-fit: cover;
+}
+
+@keyframes move {
+  from {
+    transform: translate(-10px);
+  }
+
+  to {
+    transform: translate(10px);
+
+  }
 }
 
 .img:hover {
-  transform: scale(1.05);
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 20px rgba(198, 21, 21, 0.2);
 }
 
 /* Media query pour tablettes */
 @media (min-width: 768px) {
-  .container {
+  /* .container {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-  }
+  } */
 
 
   .desc {
@@ -94,7 +105,11 @@
   }
 
   .img {
-    max-width: 600px;
+    max-width: 350px;
+    object-fit: contain;
+    /*l'image conserve son rapport hauteur/largeur, mais est redimensionnée pour s'adapter à la dimension donnée */
+    border-radius: 50%;
+
   }
 
   .desc {
