--- a/src/app/activity/page.module.css
+++ b/src/app/activity/page.module.css
@@ -1,3 +1,41 @@
-.container{
+.container {
     background-color: rgb(234, 235, 235);
+}
+
+.mainTitle {
+    font-size: 50px;
+}
+
+.selectTitre {
+    margin: 20px 0px;
+}
+
+.items {
+    display: flex;
+    gap: 50px;
+}
+
+.item {
+    border: 5px solid #bbb;
+    border-radius: 5px;
+    width: 300px;
+    height: 400px;
+    position: relative;
+    background-size: cover !important;
+}
+
+.item:nth-child(1) {
+    background: url("/hero.jpg");
+}
+
+.item :hover.title {
+    color: aqua;
+}
+
+.title {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    font-size: 20px;
+    font-weight: bold;
 }
