--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -1,5 +1,6 @@
 .container {
     background-color: darkcyan;
+    padding: 20px;
 }
 
 .title {
@@ -10,7 +11,7 @@
 
 .content {
     display: flex;
-    gap: 100px;
+    gap: 20px;
     align-items: center;
 }
 
