--- a/src/app/blog/[id]/page.module.css
+++ b/src/app/blog/[id]/page.module.css
@@ -1,52 +1,59 @@
 .container {
     background-color: aqua;
-}
-
-.top {
+  }
+  
+  .top {
     display: flex;
-}
-
-.info {
+  }
+  
+  .info {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-
-.title {
-    font-size: 40px;
-}
-
-.desc {
-    font-size: 18px;
+  }
+  
+  .title {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  
+  .desc {
+    font-size: 1rem;
     font-weight: 300;
-}
-
-.author {
+    line-height: 1.4;
+  }
+  
+  .author {
     display: flex;
     align-items: center;
     gap: 10px;
-}
-
-.avatar {
+  }
+  
+  .avatar {
+    width: 40px;
+    height: 40px;
     object-fit: cover;
-    border-radius: 20%;
-}
-
-.imageContainer {
+    border-radius: 50%;
+  }
+  
+  .imgContainer {
     flex: 1;
     height: 300px;
     position: relative;
-}
-
-.image {
+  }
+  
+  .image {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-}
-
-.content {
+  }
+  
+  .content {
     margin-top: 50px;
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: 300;
     color: #999;
     text-align: justify;
-}
+  }
+  
