--- a/src/app/blog/[id]/page.module.css
+++ b/src/app/blog/[id]/page.module.css
@@ -1,6 +1,4 @@
-.container {
-    background-color: aqua;
-  }
+
   
   .top {
     display: flex;
@@ -43,7 +41,7 @@
     position: relative;
   }
   
-  .image {
+  .img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -55,5 +53,8 @@
     font-weight: 300;
     color: #999;
     text-align: justify;
+  }
+  .Button{
+    background: blue;
   }
   
