--- a/src/app/blog/page.module.css
+++ b/src/app/blog/page.module.css
@@ -1,17 +1,26 @@
-.container{
-    background-color: rgb(0, 12, 139);
+.container {
+    background-color: rgb(0, 12, 139); /* Utilisez la couleur bleu foncé associée au logo */
     display: flex;
     align-items: center;
     gap: 50px;
     margin-bottom: 50px;
-}
-.image{
+    padding: 20px; /* Ajoutez du padding pour améliorer l'apparence */
+    border-radius: 8px; /* Ajoutez une bordure arrondie */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Ajoutez une légère ombre */
+  }
+  
+  .img {
     object-fit: cover;
-}
-.title{
+    border-radius: 4px; /* Ajoutez une bordure arrondie à l'image */
+  }
+  
+  .title {
     margin-bottom: 10px;
-}
-.desc{
+    color: #ff7f00; /* Utilisez la couleur orange associée au logo */
+  }
+  
+  .desc {
     font-size: 18px;
     color: #999;
-}
+  }
+  
