--- a/src/app/dashboard/(auth)/login/page.module.css
+++ b/src/app/dashboard/(auth)/login/page.module.css
@@ -1,3 +1,34 @@
 .container {
-    background-color: rgb(61, 187, 187);
-}
+    background-color: rgb(11, 10, 70);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .form {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .input {
+    padding: 20px;
+    background-color: transparent;
+    border: 3px solid #bbb;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #bbb;
+  }
+  .button {
+    width: 300px;
+    padding: 20px;
+    cursor: pointer;
+    background-color: #e77e05;
+    border: none;
+    border-radius: 5px;
+    color: #bbb;
+    font-weight: bold;
+  }
+  
