--- a/src/components/dashboard/sideMenu/sideMenu.module.css
+++ b/src/components/dashboard/sideMenu/sideMenu.module.css
@@ -44,7 +44,6 @@
 .subMenu li {
   margin-bottom: 5px;
   justify-content: center;
-
 }
 
 .subMenu li a {
@@ -66,7 +65,7 @@
 }
 
 .linkIcon {
-  margin-right: 5px;
+  margin-right: 15px;
   font-size: 18px;
 }
 
@@ -87,8 +86,21 @@
 .submenuIcon {
   margin-left: auto;
   transition: transform 0.3s ease;
+  display: flex;
+  align-items: center;
+}
+.subMenu.open {
+  left: 100%;
+  top: 0;
 }
 
+.subMenu.open .submenuIcon {
+  transform: rotate(90deg);
+}
+
+.menuList li:hover a .submenuIcon {
+  transform: rotate(90deg);
+}
 .settingsLink:hover span {
   color: #555;
 }
@@ -97,6 +109,4 @@
   top: 0;
 }
 
-.subMenu.open .submenuIcon {
-  transform: rotate(180deg);
-}
+
